[package]
authors = ["Michael Lamparski <diagonaldevice@gmail.com>"]
name = "vasp-poscar"
version = "0.1.0"
license = "MIT/Apache-2.0"

[dependencies]
dtoa = "0.4.2"
failure = "0.1.1"

[dev-dependencies]
serde = { version = "1.0.27", features = ["derive"] }
serde_yaml = "0.7.3"
left-pad = "1.0.1" # this can't possibly go wrong
indoc = "0.2.3"

[[test]]
harness = false
name = "parse"

[[test]]
name = "raw-parse"

[[test]]
name = "raw-write"

[[test]]
name = "validate"
