[package]
name = "vasp-poscar"
version = "0.3.1"
authors = ["Michael Lamparski <diagonaldevice@gmail.com>"]
description = "read and write VASP POSCAR files"
repository = "https://github.com/ExpHP/vasp-poscar"
keywords = ["physics", "crystallography", "io"]
categories = ["filesystem", "parsing", "science", "simulation"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "ExpHP/vasp-poscar" }

[dependencies]
dtoa = "0.4.2"
failure = "0.1.1"

[dev-dependencies]
serde = { version = "1.0.27", features = ["derive"] }
serde_yaml = "0.7.3"
indoc = "0.2.3"
version-sync = "0.8"

[[test]]
harness = false
name = "parse"

[[test]]
name = "raw-parse"

[[test]]
name = "raw-write"

[[test]]
name = "validate"

[[test]]
name = "parse-trailing-lines"

[[test]]
name = "version-numbers"
